force-app/main/default/objects/System_Log__c/System_Log__c.object-meta.xml
<CustomObject>
    <description>Stores system logs for tracking and debugging purposes</description>
    <label>System Log</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 