force-app/main/default/objects/System_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>JSON string containing contextual information about the log entry</description>
    <label>Context</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField> 