force-app/main/default/objects/System_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>The type of error that occurred (if applicable)</description>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 