force-app/main/default/objects/System_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the log entry was created</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 