force-app/main/default/objects/System_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Log_Level__c</columns>
    <columns>Message__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView> 