force-app/main/default/objects/System_Log__c/listViews/Recent_Errors.listView-meta.xml
<ListView>
    <fullName>Recent_Errors</fullName>
    <columns>NAME</columns>
    <columns>Log_Level__c</columns>
    <columns>Message__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Log_Level__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <filters>
        <field>Timestamp__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Recent Errors</label>
</ListView> 